--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -299,7 +299,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{{ path('home') }}" class="nav-link">
+                <a href="{{ path('permission_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Permisssions</p>
                 </a>
@@ -420,8 +420,6 @@
 			<!-- AdminLTE App --><script src="{{asset('assets/dist/js/adminlte.min.js')}}"> </script>
 			<script src="{{asset('assets/plugins/select2/js/select2.full.min.js')}}"></script>
 			<script src="{{asset('assets/js/bootstrap.min.js')}}"></script>
-
-
 			{% block javascripts %}{% endblock %}
 
 		</body>
