--- a/templates/user_group/index.html.twig
+++ b/templates/user_group/index.html.twig
@@ -20,7 +20,7 @@
 			<div class="card-body">
 				<div class="row">
 					<div class="col-md-12">
-					{% if is_granted("ad_usr_grp") %}
+					{# {% if is_granted("ad_usr_grp") %} #}
 						<div class="card card-info collapsed-card ">
 							<div class="card-header">
 								<h3 class="card-title">
@@ -44,11 +44,10 @@
 								{% endif %}
 								{{ include('user_group/_form.html.twig') }}
 
-
 							</div>
 							<!-- /.card-body -->
 						</div>
-					{% endif %}
+					{# {% endif %} #}
 					</div>
 
 					<div class="col-md-12">
@@ -119,14 +118,15 @@
 															</button>
 														</form>
 													{% endif %}
-													{% if user_group.permission|length and is_granted("ad_usr_t_grp") %}
-														<form class="d-inline" method="post" action="{{ path('user_group_users', {'id': user_group.id}) }}">
+													{# {% if user_group.permission|length and is_granted("ad_usr_t_grp") %} #}
+														{# <form class="d-inline" method="post" action="{{ path('user_group_users', {'id': user_group.id}) }}">
 															<input type="hidden" name="edit" value="{{user_group.id}}">
 															<button class="btn btn-sm btn-outline-success" title="Users">
 																<i class="fa fa-users"></i>
 															</button>
-														</form>
-													{% endif %}
+														</form> #}
+													    <a href="{{ path('user_group_users',{'id': user_group.id})}}">manage</a>
+													{# {% endif %} #}
 													{% if is_granted("edt_usr_grp") %}
 														<form class="d-inline" method="post">
 															<input type="hidden" name="edit" value="{{user_group.id}}">
