--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -234,22 +234,18 @@
                   <p>Product</p>
                 </a>
               </li>
-<<<<<<< HEAD
-        
-=======
-              <li class="nav-item">
+              {# <li class="nav-item">
                 <a href="{{ path('product_index2') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Product2</p>
                 </a>
-              </li>
-              <li class="nav-item">
+              </li> #}
+              {# <li class="nav-item">
                 <a href="{{ path('order_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Requests</p>
                 </a>
-              </li>
->>>>>>> nebiyou
+              </li> #}
               <li class="nav-item">
                 <a href="{{ path('requests_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
