--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -55,10 +55,12 @@
 						                <th>Price</th>
 						                <th>Category</th>
 						                <th>actions</th>
+						                <th>#</th>
 										</tr>
 									</thead>
 									<tbody>
 										{% set i = 1 %}
+									
 										{% for product in products %}
 											<tr>
 												<td>
@@ -100,6 +102,7 @@
 													</form>
 												
 												</td>
+												<td><label><input type="checkbox"></label><td>
 
 											</tr>
 										{% else %}
@@ -109,7 +112,7 @@
 										{% endfor %}
 									</tbody>
 								</table>
-								<div class="float-right">{{ knp_pagination_render(products) }}</div>
+								{#<div class="float-right">{{ knp_pagination_render(products) }}</div>#}
 
 
 							</div>
