--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -234,9 +234,6 @@
                   <p>Product</p>
                 </a>
               </li>
-<<<<<<< HEAD
-        
-=======
               <li class="nav-item">
                 <a href="{{ path('product_index2') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
@@ -244,12 +241,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="{{ path('order_index') }}" class="nav-link">
+                {# <a href="{{ path('order_index') }}" class="nav-link"> #}
                   <i class="far fa-circle nav-icon"></i>
                   <p>Requests</p>
                 </a>
               </li>
->>>>>>> nebiyou
               <li class="nav-item">
                 <a href="{{ path('requests_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
