--- a/templates/user_group/index.html.twig
+++ b/templates/user_group/index.html.twig
@@ -80,6 +80,7 @@
 
 											<th>description</th>
 											<th>Status</th>
+											<th>permission</th>
 											<th>Action</th>
 										</tr>
 									</thead>
