--- a/templates/user_group/index.html.twig
+++ b/templates/user_group/index.html.twig
@@ -80,7 +80,7 @@
 
 											<th>description</th>
 											<th>Status</th>
-											<th>permission</th>
+											{# <th>permission</th> #}
 											<th>Action</th>
 										</tr>
 									</thead>
@@ -96,19 +96,19 @@
 												</td>
 												<td>{{ user_group.name }}
 													<span class="badge badge-primary badge-pill">
-														{# {{ user_group.users|length}}</span> #}
+														 {{ user_group.users|length}}  users</span>
 												</td>
 
 												<td>{{ user_group.description }}</td>
 												<td>
-													{% if is_granted("edt_usr_grp") %}
+													{# {% if is_granted("edt_usr_grp") %} #}
 
 														<form class="d-inline" method="post" action="{{ path('user_group_action',{'id':user_group.id})}}" onsubmit="return confirm('Are you sure you want to {{ user_group.isActive ? 'DeActivate':'Activate'}} this User Group?');">
 															<input name="activateUserGroup" value="{{ user_group.isActive ? 0 : 1}}" hidden>
 															{{ user_group.isActive ?  '<button class="btn btn-sm badge-danger">Deactivate</button>': '<button class="btn btn-sm btn-success">Activate</button>' }}
 
 														</form>
-													{% endif %}
+													{# {% endif %} #}
 												</td>
 												<td>
 													{% if is_granted("ad_prmsn_t_grp") %}
@@ -119,6 +119,8 @@
 															</button>
 														</form>
 													{% endif %}
+
+													
 													{# {% if user_group.permission|length and is_granted("ad_usr_t_grp") %} #}
 														{# <form class="d-inline" method="post" action="{{ path('user_group_users', {'id': user_group.id}) }}">
 															<input type="hidden" name="edit" value="{{user_group.id}}">
