--- a/templates/user_group/user.html.twig
+++ b/templates/user_group/user.html.twig
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="{{asset('assets/plugins/multi-select/jquery.lwMultiSelect.css')}}"/>
 {% endblock %}
 {% block body %}
-<form action="{{path('user_group_permission1')}}" method="post">
+<form action="{{path('user_group_permission1',{id: user_group.id})}}" method="post">
 	<div class="card ">
 		<div class="card-header">
 			<h3 class="card-title">
