--- a/templates/requests/index.html.twig
+++ b/templates/requests/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Requests index
+{% block title %}
+	Requests index
 {% endblock %}
 {% block maintitle %}
 
@@ -20,11 +21,11 @@
 					<div class="col-md-12">
 						<div class="card" style="background-color: #17a2b8; color:white">
 
-                            <div class="card-header">
+							<div class="card-header">
 								<h3 class="card-title">
-								
+
 									Item Requests list
-									 
+
 								</h3>
 
 							</div>
@@ -34,7 +35,8 @@
 
 					<div class="col-md-12">
 						<div class="card card ">
-							<div class="card-header">
+							<div
+								class="card-header">
 								{# <h3 class="card-title">Requests List</h3> #}
 								<div class="card-tools">
 
@@ -55,80 +57,95 @@
 
 								<table class="table table-hover">
 									<thead class="thead-light">
-									
-            <tr>
-                <th>No.</th>
-                <th>Requester</th>
-                <th>Req.Date</th>
-                <th>Approver 1</th>
-                <th>Approver 2</th>
-                <th>Approver 3</th>
-                <th>Details</th>
-            </tr>
-        
+
+										<tr>
+											<th>No.</th>
+											<th>Requester</th>
+											<th>Req.Date</th>
+											<th>Approver 1</th>
+											<th>Approver 2</th>
+											<th>Approver 3</th>
+											<th>Details</th>
+										</tr>
+
 									</thead>
 									<tbody>
 										{% set i = 1 %}
-										  {% for request in requests %}
+										{% for request in requests %}
 											<tr>
 												<td>
 													{{ loop.index }}
 												</td>
-											        
-                <td>{{ request.requester }}</td>
-                <td>{{ request.requestedDate ? request.requestedDate|date('Y-m-d') : '' }}</td>
-                
-				
-				<td>
-				{% if request.status == 1 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif request.status == 10 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif request.approval1 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-						<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ request.approval1 }}
-				</td>
+
+												<td>{{ request.requester }}</td>
+												<td>{{ request.requestedDate ? request.requestedDate|date('Y-m-d') : '' }}</td>
+{#| sort ((a,b) => a.approvalLevel <=> b.approvalLevel ) | column('approvalLevel') #}
+												{% set logs = request.approvalLogs  %}
+
+												{% for indx in 0..2 %}
+
+													<td>
+
+														{% if logs[indx] is defined and not null %}
+{# <pre>
+	{{ dump(logs[indx].approvalLevel) }}
+</pre> #}
+															{% if logs[indx].approvalLevel == 1 + indx %}
+																{% if logs[indx].status == 1 %}
+																	<i class="fa fa-check" style="color:green"></i>
+																{% elseif logs[indx].status == 2  %}
+																	<i class="fa fa-times" style="color:red"></i>
+																{% else %}
+																	<i class="fa fa-spinner" style="color:primary"></i>
+																{% endif %}
+
+																&nbsp;
+																{{ logs[indx].approver }}
+															{% endif %}
+														
+														{% else %}
+																<i class="fa fa-spinner" style="color:primary"></i>
+														{% endif %}
+
+													</td>
+												{% endfor %}
+
+												{# <td>
+																
+																{% if request.status == 2 %}
+																<i class="fa fa-check" style="color:green"></i> 
+																{% elseif request.status == 20 %}
+																<i class="fa fa-times" style="color:red"></i> 	
+																{% elseif request.approval2 %}
+																<i class="fa fa-check" style="color:green"></i> 
+																{% else %}
+																	<i class="fa fa-spinner" style="color:primary"></i> 	
+																{% endif %}
+																&nbsp; 
+																{{ request.approval2 }}
+																</td>
+												
+												
+												
+												
+												              <td>
+																
+																{% if request.status == 3 %}
+																<i class="fa fa-check" style="color:green"></i> 
+																{% elseif request.status == 30 %}
+																<i class="fa fa-times" style="color:red"></i> 	
+																{% elseif request.approval3 %}
+																<i class="fa fa-check" style="color:green"></i> 
+																{% else %}
+																	<i class="fa fa-spinner" style="color:primary"></i> 	
+																{% endif %}
+																&nbsp; 
+																{{ request.approval3 }} 
+																</td> #}
 
 
-              <td>
-				
-				{% if request.status == 2 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif request.status == 20 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif request.approval2 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-					<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ request.approval2 }}
-				</td>
-
-
-
-
-              <td>
-				
-				{% if request.status == 3 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif request.status == 30 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif request.approval3 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-					<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ request.approval3 }} 
-				</td>
-
-						<td>							
-					<a href="{{ path('requests_show', {'id': request.id}) }}" class="btn btn-info btn-sm" title="Show">
+												<td>
+													<a href="{{ path('requests_show', {'id': request.id}) }}" class="btn btn-info btn-sm" title="Show">
 														<i class="fa fa-eye"></i>
 													</a>
 
