--- a/templates/user_group/index.html.twig
+++ b/templates/user_group/index.html.twig
@@ -105,7 +105,7 @@
 
 														<form class="d-inline" method="post" action="{{ path('user_group_action',{'id':user_group.id})}}" onsubmit="return confirm('Are you sure you want to {{ user_group.isActive ? 'DeActivate':'Activate'}} this User Group?');">
 															<input name="activateUserGroup" value="{{ user_group.isActive ? 0 : 1}}" hidden>
-															{{ user_group.isActive ?  '<button class="btn btn-sm badge-danger">Deactivate</button>': '<button class="btn btn-sm btn-success">Activate</button>' }}
+															{{ user_group.isActive ?  '<button class="btn btn-sm badge-success">Enabled</button>': '<button class="btn btn-sm btn-danger">Disabled</button>' }}
 
 														</form>
 													{# {% endif %} #}
