--- a/templates/brand/index.html.twig
+++ b/templates/brand/index.html.twig
@@ -1,37 +1,125 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Brand index{% endblock %}
+{% block title %} Departement index
+{% endblock %}
+{% block maintitle %}
 
+	Manage brands
+{% endblock %}
+{% block breadcrumb %}
+	<li class="breadcrumb-item active">Stock
+	</li>
+	<li class="breadcrumb-item active">brand</li>
+{% endblock %}
 {% block body %}
-    <h1>Brand index</h1>
+	<div class="row">
+		<div class="card col-md">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Description</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for brand in brands %}
-            <tr>
-                <td>{{ brand.id }}</td>
-                <td>{{ brand.name }}</td>
-                <td>{{ brand.description }}</td>
-                <td>
-                    <a href="{{ path('brand_show', {'id': brand.id}) }}">show</a>
-                    <a href="{{ path('brand_edit', {'id': brand.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+			<div class="card-body">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="card card-info {{edit?'':'collapsed-card'}}">
+							<div class="card-header">
+								<h3 class="card-title">
+									{% if edit  %}Edit
+									{% else %}
+										Add New
+									{% endif %}
+								</h3>
 
-    <a href="{{ path('brand_new') }}">Create new</a>
+								<div class="card-tools">
+									<button type="button" class="btn btn-tool" data-card-widget="collapse">
+										<i class="fas {{edit?'fa-minus':'fa-plus'}}"></i>
+									</button>
+								</div>
+								<!-- /.card-tools -->
+							</div>
+							<!-- /.card-header -->
+							<div class="card-body">
+								{% if edit  %}
+									{% set button_label = 'Update' %}
+								{% endif %}
+								{{ include('brand/_form.html.twig') }}
+
+
+							</div>
+							<!-- /.card-body -->
+						</div>
+					</div>
+
+					<div class="col-md-12">
+						<div class="card card ">
+							<div class="card-header">
+								<h3 class="card-title">brand List</h3>
+								<div class="card-tools">
+
+									<form class="form-inline ml-3">
+										<div class="input-group ">
+											<input class="form-control" autocomplete="off" name="search" type="search" placeholder="Search" aria-label="Search">
+											<div class="input-group-append">
+												<button class=" input-group-text btn btn-navbar " type="submit">
+													<i class="fas fa-search"></i>
+												</button>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="card-body">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th>Id</th>
+                                            <th>Name</th>
+                                            <th>Description</th>
+                                            <th>actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for brand in brands %}
+                                        <tr>
+                                            <td>{{ brand.id }}</td>
+                                            <td>{{ brand.name }}</td>
+                                            <td>{{ brand.description }}</td>
+                                            <td>
+                                                <form class="d-inline" method="post">
+														<input type="hidden" name="edit" value="{{brand.id}}">
+														<button class="btn btn-info btn-sm" title="Edit">
+															<i class="fa fa-edit"></i>
+														</button>
+													</form>
+													<form class="d-inline" method="post" action="{{ path('brand_delete', {'id': brand.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
+														<input type="hidden" name="_method" value="DELETE">
+														<input
+														type="hidden" name="_token" value="{{ csrf_token('delete' ~ brand.id) }}">
+														{#  <button type="button" data-type="confirm" class="btn btn-danger js-sweetalert" title="Delete">#}
+														<button class="btn btn-danger btn-sm" title="Delete">
+															<i class="fa fa-trash"></i>
+														</button>
+													</form>
+													<a href="{{ path('brand_show', {'id': brand.id}) }}" class="btn btn-info btn-sm" title="Show">
+														<i class="fa fa-eye"></i>
+													</a>    
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                        <tr>
+                                            <td colspan="4">no records found</td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+								<div class="float-right">{{ knp_pagination_render(brands) }}</div>
+							</div>
+						</div>
+					</div>
+					<!-- /.card-body -->
+				</div>
+			</div>
+
+		</div>
+		<!-- /.card-body -->
+	</div>
+
 {% endblock %}
