orders re corrected

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -255,7 +255,7 @@
               <li class="nav-item">
                 <a href="{{ path('stock_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Stock in Out</p>
+                  <p>Stock In</p>
                 </a>
               </li>
               <li class="nav-item">
