add user and date to stock in/out print

--- a/templates/stock/print.html.twig
+++ b/templates/stock/print.html.twig
@@ -78,7 +78,7 @@
 					</b></center>
 				</div>
 				<div class="col-md-12">
-                    ስም __________________________________________ከዚህ በታች በዝርዝር የተመለከተውን _______ ቀን 20 ________ ዓ.ም ከ _________________________________ <br>
+                    ስም <u> {{app.user}}  </u> ከዚህ በታች በዝርዝር የተመለከተውን {{ "now"|date("M d") }} ቀን {{ "now"|date("Y") }} ዓ.ም ከ _________________________________ <br>
                     ተቀበያለሁ። 
 					<table width="100%" border="1">
 						<thead>
