--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -271,6 +271,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a href="{{ path('company_index') }}" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Company</p>
+                </a>
+              </li>
+              <li class="nav-item">
                 <a href="{{ path('home') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Reports</p>
