--- a/templates/stock/_form.html.twig
+++ b/templates/stock/_form.html.twig
@@ -9,6 +9,16 @@
                             <div class="help-block with-errors"></div>
           </div>
                            
+     
+                                     
+        <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.company) }}</label>
+                             {{ form_widget(form.company,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+          </div>
+
+
+                           
         <div class="form-group">
                   <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.store) }}</label>
                              {{ form_widget(form.store,{'attr':{'class':'form-control'}}) }}
