--- a/templates/stock/index.html.twig
+++ b/templates/stock/index.html.twig
@@ -77,6 +77,7 @@
 											<th>Product</th>
 											<th>quantity</th>
 											<th>store</th>
+											<th>company</th>
 											<th>date</th>
 											
 											<th>actions</th>
@@ -96,6 +97,7 @@
 												<td>{{ stock.product }}</td>
 												<td>{{ stock.quantity }}</td>
 												<td>{{ stock.store }}</td>
+												<td>{{ stock.company}}</td>
 												<td>{{ stock.date | date('Y-m-d') }}</td>
 												<td>
 <a href="{{ path('stock_show', {'id': stock.id}) }}" class="btn btn-info btn-sm" title="Show">
