--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -14,7 +14,6 @@
 {% block body %}
 	<div class="row">
 		<div class="card col-md">
-
 			<div class="card-body">
 				<div class="row">
 					<div class="col-md-12">
@@ -46,29 +45,67 @@
 							<!-- /.card-body -->
 						</div>
 					</div>
-
+				
 					<div class="col-md-12">
 						<div class="card card ">
 							<div class="card-header">
 								<h3 class="card-title">Product List</h3>
 								<div class="card-tools">
 
-									<form class="form-inline ml-3">
-										<div class="input-group ">
-											<input class="form-control" autocomplete="off" name="search" type="search" placeholder="Search" aria-label="Search">
-											<div class="input-group-append">
-												<button class=" input-group-text btn btn-navbar " type="submit">
-													<i class="fas fa-search"></i>
-												</button>
-											</div>
-										</div>
-									</form>
 								</div>
 							</div>
 							<div class="card-body">
 
+							<div class="col-xs-12 col-md-12">
+							{{ form_start(searchForm,{'attr': {'role':'form'}, 'method': 'GET'}) }}
+								<div class="row">
+									
+									<div class="col-sm-2">		
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right">{{ form_label(searchForm.name) }}</label>
+											{{ form_widget(searchForm.name,{'attr':{'class':'form-control'},'full_name':'name','value':app.request.get('name') })}}
+											{# <input type="text" class="form-control" name="name"/> #}
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-sm-2">
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right">{{ form_label(searchForm.brand) }}</label>
+											{{ form_widget(searchForm.brand,{'attr':{'class':'form-control'},'full_name':'brand','value': app.request.get('brand')}) }}
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-sm-2">
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right">{{ form_label(searchForm.productType) }}</label>
+											{{ form_widget(searchForm.productType,{'attr':{'class':'form-control'},'full_name':'productType','value': app.request.get('productType')}) }}
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-sm-2">
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right">{{ form_label(searchForm.price) }}</label>
+											{{ form_widget(searchForm.price,{'attr':{'class':'form-control'},'full_name':'price','value': app.request.get('price')}) }}
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-sm-2">
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right">{{ form_label(searchForm.category) }}</label>
+											{{ form_widget(searchForm.category,{'attr':{'class':'form-control'},'full_name':'category','value': app.request.get('category')}) }}
+											<div class="help-block with-errors"></div>
+										</div>
+									</div>
+									<div class="col-sm-2">
+										<div class="form-group">
+											<label class="col-sm-12 control-label no-padding-right"></label>
+											<button class="btn btn-info" style="margin-top:15px;width:100%;"><i class="fas fa-search"></i></button>
+										</div>
+									</div>
+								{{ form_end(form) }}
+							</div>
 
-							<table class="table table-hover">
+							<table class="table table-hover " width="100%">
 								<thead class="thead-light">
 									<tr>
 										<th>#</th>
@@ -98,17 +135,9 @@
 												{# <td>{{ product.model }}</td>
 												<td>{{ product.serial }}</td> #}
 												<td>{{ product.price }}</td>
-												 
-												 
-												 
-												<td>{{ product.category }}</td>
-												
-												
-												
-
-
+											    <td>{{ product.category }}</td>
 												<td>
-	<a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info btn-sm" title="Show">
+													<a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-info btn-sm" title="Show">
 														<i class="fa fa-eye"></i>
 													</a>
 
@@ -142,9 +171,7 @@
 										{% endfor %}
 									</tbody>
 								</table>
-								{#<div class="float-right">{{ knp_pagination_render(products) }}</div>#}
-
-
+								<div class="float-right">{{ knp_pagination_render(products) }}</div>
 							</div>
 						</div>
 					</div>
