--- a/templates/user_group/index.html.twig
+++ b/templates/user_group/index.html.twig
@@ -54,22 +54,43 @@
 						<div class="card ">
 							<div class="card-header">
 								<h3 class="card-title">User Group List</h3>
-								<div class="card-tools">
-										<form class="form-inline ml-3">
-										<div class="input-group ">
-											<input class="form-control" autocomplete="off" name="search" type="search" placeholder="Search" aria-label="Search">
-											<div class="input-group-append">
-												<button class=" input-group-text btn btn-navbar " type="submit">
-													<i class="fas fa-search"></i>
-												</button>
-											</div>
-										</div>
-									</form>
-								</div>
 							</div>
 							<div class="card-body">
-
-
+								<div class="col-xs-12 col-md-12">
+									{{ form_start(searchForm,{'attr': {'role':'form'}, 'method': 'GET'}) }}
+										<div class="row">
+											
+											<div class="col-sm-4">		
+												<div class="form-group">
+													<label class="col-sm-12 control-label no-padding-right">Name</label>
+													{{ form_widget(searchForm.name,{'attr':{'class':'form-control'},'full_name':'name','value':app.request.get('name') })}}
+													{# <input type="text" class="form-control" name="name"/> #}
+													<div class="help-block with-errors"></div>
+												</div>
+											</div>
+											<div class="col-sm-4">
+												<div class="form-group">
+													<label class="col-sm-12 control-label no-padding-right">Description</label>
+													{{ form_widget(searchForm.description,{'attr':{'class':'form-control'},'full_name':'description','value': app.request.get('description')}) }}
+													<div class="help-block with-errors"></div>
+												</div>
+											</div>
+											<div class="col-sm-2">
+												<div class="form-group">
+													<label class="col-sm-12 control-label no-padding-right">isActive</label>
+													{{ form_widget(searchForm.isActive,{'attr':{'class':'form-control'},'full_name':'isActive','value': app.request.get('isActive')}) }}
+													<div class="help-block with-errors"></div>
+												</div>
+											</div>
+											
+											<div class="col-sm-1">
+												<div class="form-group">
+													<label class="col-sm-12 control-label no-padding-right"></label>
+													<button class="btn btn-info" style="margin-top: 8px;width:100%;"><i class="fas fa-search"></i></button>
+												</div>
+											</div>
+										{{ form_end(form) }}
+									</div>
 								<table class="table table-hover">
 									<thead>
 										<tr>
