--- a/templates/balance/index.html.twig
+++ b/templates/balance/index.html.twig
@@ -74,6 +74,7 @@
 							<div class="card-body">
 
 
+
 								<table class="table table-hover">
 									<thead class="thead-light">
 										<tr>
@@ -106,7 +107,8 @@
 												<td>
 
 													
-													<a href="{{ path('product_show', {'id': stock.productId}) }}" class="btn btn-info btn-sm" title="Show">
+													<a href="{{ path('product_show', {'id': stock.productId}) }}" class="btn btn-info btn-sm 
+													{% if stock.avail.requested >= stock.avail.stock %} disabled {% endif %}" title="Show" >
 														<i class="">More</i>
 													</a> 
 
