before product report generate

--- a/templates/stock/index.html.twig
+++ b/templates/stock/index.html.twig
@@ -90,7 +90,7 @@
 											<div class="col-sm-3">
 												<div class="form-group">
 													<label class="col-sm-12 control-label no-padding-right">Date</label>
-													<input type="date" value="{{app.request.get('date')}}" name="date"/>
+													<input type="date" value="{{app.request.get('date')}}" class="form-control" name="date"/>
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
