--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -12,14 +12,15 @@
                 <th>Name</th>
                 <td>{{ product.name }}</td>
             </tr>
-            <tr>
+            {# <tr>
                 <th>Price</th>
                 <td>{{ product.price }}</td>
-            </tr>
+            </tr> #}
             {# <tr>
                 <th>Quantity</th>
-                <td>{{ product.quantity }}</td>
+                <td>{{ stock.price }}</td>
             </tr> #}
+
             <tr>
                 <th>Product Type</th>
                 <td>{{ product.productType }}</td>
