--- a/templates/requests/model22.html.twig
+++ b/templates/requests/model22.html.twig
@@ -139,7 +139,7 @@
 								<td>{{order.quantity}}</td>
 								<td>{{order.unitprice}}</td>
 								<td>{{ order.unitprice * order.quantity }}</td>
-								<td>This is very amazing remarks,</td>
+								<td>Remarks here ...</td>
 								{% set total = total +  order.unitprice * order.quantity  %}
 								
 								 
