--- a/templates/stock/_form.html.twig
+++ b/templates/stock/_form.html.twig
@@ -36,6 +36,15 @@
 
        
          
+
+    <div class="form-group">
+                  <label class="col-sm-5 control-label no-padding-right">{{ form_label(form.price) }} per unit</label>
+                             {{ form_widget(form.price,{'attr':{'class':'form-control'}}) }}
+                            <div class="help-block with-errors"></div>
+     </div>
+
+       
+         
                 
        
     {% if not button_label is defined  %}
