--- a/templates/stock/index.html.twig
+++ b/templates/stock/index.html.twig
@@ -111,6 +111,7 @@
 											<th>Product</th>
 											<th>quantity</th>
 											<th>store</th>
+											<th>price per unit</th>
 											<th>company</th>
 											<th>date</th>
 											
@@ -131,6 +132,7 @@
 												<td>{{ stock.product }}</td>
 												<td>{{ stock.quantity }}</td>
 												<td>{{ stock.store }}</td>
+												<td>{{ stock.price }}</td>
 												<td>{{ stock.company}}</td>
 												<td>{{ stock.date | date('Y-m-d') }}</td>
 												<td>
