--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -225,13 +225,13 @@
               <li class="nav-item">
                 <a href="{{ path('product_type_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Product type</p>
+                  <p>Usage type</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{{ path('product_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Product</p>
+                  <p>Product Type</p>
                 </a>
               </li>
               {# <li class="nav-item">
@@ -249,19 +249,19 @@
               <li class="nav-item">
                 <a href="{{ path('requests_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Requests</p>
+                  <p>Request status</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{{ path('stock_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Stock In</p>
+                  <p><span class="fa fa-plus"></span> Add stocks</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{{ path('balance') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Available Stocks</p>
+                  <p>Request items</p>
                 </a>
               </li>
               <li class="nav-item">
