--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Order index
+{% block title %}
+	Order index
 {% endblock %}
 {% block maintitle %}
 
@@ -20,11 +21,11 @@
 					<div class="col-md-12">
 						<div class="card" style="background-color: #17a2b8; color:white">
 
-                            <div class="card-header">
+							<div class="card-header">
 								<h3 class="card-title">
-								
+
 									Item Requests list
-									 
+
 								</h3>
 
 							</div>
@@ -34,7 +35,8 @@
 
 					<div class="col-md-12">
 						<div class="card card ">
-							<div class="card-header">
+							<div
+								class="card-header">
 								{# <h3 class="card-title">Requests List</h3> #}
 								<div class="card-tools">
 
@@ -55,88 +57,83 @@
 
 								<table class="table table-hover">
 									<thead class="thead-light">
-									
-            <tr>
-                <th>No.</th>
-                <th>Product</th>
-                <th>Requester</th>
-                <th>Quantity</th>
-                <th>Model</th>
-                <th>Serial</th>
-                <th>Req.Date</th>
-                <th>Approver 1</th>
-                <th>Approver 2</th>
-                <th>Approver 3</th>
-                <th>Details</th>
-            </tr>
-        
+										<tr>
+											<th>No.</th>
+											<th>Product</th>
+											<th>Requester</th>
+											<th>Quantity</th>
+											<th>Model</th>
+											<th>Serial</th>
+											<th>Req.Date</th>
+											<th>Approver 1</th>
+											<th>Approver 2</th>
+											<th>Approver 3</th>
+											<th>Details</th>
+										</tr>
 									</thead>
 									<tbody>
 										{% set i = 1 %}
-										  {% for order in orders %}
+										{% for order in orders %}
 											<tr>
 												<td>
 													{{ i }}
 													{% set i = i+1 %}
 												</td>
-											       <td>{{ order.product }}</td>
-                <td>{{ order.receiver }}</td>
-                <td>{{ order.quantity }}</td>
-                <td>{{ order.product.brand }}</td>
-                <td>{{ order.serial }}</td>
-                <td>{{ order.requestedDate ? order.requestedDate|date('Y-m-d') : '' }}</td>
-                
-				
-				<td>
-				{% if order.status == 1 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif order.status == 10 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif order.approval1 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-						<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ order.approval1 }}
-				</td>
+												<td>{{ order.product }}</td>
+												<td>{{ order.quantity }}</td>
+												<td>{{ order.product.brand }}</td>
+												<td>{{ order.serial }}</td>
+												<td>{{ order.requestedDate ? order.requestedDate|date('Y-m-d') : '' }}</td>
 
 
-              <td>
-				
-				{% if order.status == 2 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif order.status == 20 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif order.approval2 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-					<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ order.approval2 }} 
-				</td>
+												<td>
+													{% if order.status == 1 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% elseif order.status == 10 %}
+														<i class="fa fa-times" style="color:red"></i>
+													{% elseif order.approval1 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% else %}
+														<i class="fa fa-spinner" style="color:primary"></i>
+													{% endif %}
+													&nbsp;
+													{{ order.approval1 }}
+												</td>
 
 
+												<td>
+
+													{% if order.status == 2 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% elseif order.status == 20 %}
+														<i class="fa fa-times" style="color:red"></i>
+													{% elseif order.approval2 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% else %}
+														<i class="fa fa-spinner" style="color:primary"></i>
+													{% endif %}
+													&nbsp;
+													{{ order.approval2 }}
+												</td>
 
 
-              <td>
-				
-				{% if order.status == 3 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% elseif order.status == 30 %}
-				<i class="fa fa-times" style="color:red"></i> 	
-				{% elseif order.approval3 %}
-				<i class="fa fa-check" style="color:green"></i> 
-				{% else %}
-					<i class="fa fa-spinner" style="color:primary"></i> 	
-				{% endif %}
-				&nbsp; 
-				{{ order.approval3 }}
-				</td>
+												<td>
 
-						<td>							
-					<a href="{{ path('order_show', {'id': order.id}) }}" class="btn btn-info btn-sm" title="Show">
+													{% if order.status == 3 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% elseif order.status == 30 %}
+														<i class="fa fa-times" style="color:red"></i>
+													{% elseif order.approval3 %}
+														<i class="fa fa-check" style="color:green"></i>
+													{% else %}
+														<i class="fa fa-spinner" style="color:primary"></i>
+													{% endif %}
+													&nbsp;
+													{{ order.approval3 }}
+												</td>
+
+												<td>
+													<a href="{{ path('order_show', {'id': order.id}) }}" class="btn btn-info btn-sm" title="Show">
 														<i class="fa fa-eye"></i>
 													</a>
 
