--- a/templates/balance/index.html.twig
+++ b/templates/balance/index.html.twig
@@ -21,7 +21,10 @@
 					<div class="col-md-12">
 						<div class="card card ">
 							<div class="card-header">
-								{% if  carts %}
+
+
+
+								{# {% if  carts %}
 
 									<div class="container conatainer-fluid p-2 col-12" style="background-color:#17a2b8;">
 										<table class="table table-condensed table-bordered" style="background:#fff;width:60%">
@@ -41,6 +44,7 @@
 													</tr>
 
 												{% endfor %}
+
 											</tbody>
 										</table>
 
@@ -53,7 +57,33 @@
 										</form>
 									</div>
 									<br>
-								{% endif %}
+								{% endif %} #}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 								<div class="card-tools">
 
 									<form class="form-inline ml-3">
@@ -77,7 +107,7 @@
 											<th>Available</th>
 											<th>Requested</th>
 											<th>UOM</th>
-											<th>actions</th>
+											{# <th>actions</th> #}
 										</tr>
 									</thead>
 									<tbody>
@@ -92,13 +122,13 @@
 												<td>{{ stock.avail.stock }}</td>
 												<td>{{ stock.avail.requested }}</td>
 												<td>{{ stock.unit }}</td>
-												<td>
+												{# <td>
 													<a href="{{ path('product_show', {'id': stock.productId}) }}" class="btn btn-info btn-sm																																					{% if stock.avail.requested >= stock.avail.stock %} disabled {% endif %}" title="Show">
 														<i class="">More</i>
 													</a>
 
 
-												</td>
+												</td> #}
 
 											</tr>
 										{% else %}
