--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -255,13 +255,13 @@
               <li class="nav-item">
                 <a href="{{ path('stock_index') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p><span class="fa fa-plus"></span> Add stocks</p>
+                  <p>  Availabe stocks</p>
                 </a>
               </li>
               <li class="nav-item">
                 <a href="{{ path('balance') }}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Request items</p>
+                  <p>Balance</p>
                 </a>
               </li>
               <li class="nav-item">
